[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-pyproject"
version = "0.1.1"
description = "Move some of your Sphinx configuration into pyproject.toml"
readme = "README.rst"
keywords = [ "documentation", "pep621", "sphinx", "toml",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
